Fixed broken interface layout after Bootstrap update

--- a/css/navbar-top.css
+++ b/css/navbar-top.css
@@ -6,6 +6,18 @@
     margin-left: -15px;
 }
 
+.notifications
+{
+    padding-left: 0;
+    padding-right: 0;
+}
+
+#search-group
+{
+    padding-right: 0;
+    padding-top: 8px;
+}
+
 #notifications strong
 {
     color: #EC1D25;
@@ -21,6 +33,20 @@
     width: 30px;
     height: 30px;
     cursor: pointer;
+}
+
+#signed-in-user
+{
+    /*padding-left: 0;*/
+    /*padding-right: 0;*/
+
+
+}
+
+#signed-in-user-id
+{
+    font-size: medium;
+    padding-right: 10px;
 }
 
 #test-content-size
@@ -76,6 +102,6 @@
     display: none;
 }
 
-{
-    display: none;
-}
+/*{*/
+    /*display: none;*/
+/*}*/
