--- a/css/side-panels.css
+++ b/css/side-panels.css
@@ -137,11 +137,11 @@
     /*padding-top: 5px;*/
 }
 
-#acc-content, #acc-content2, #acc-content3
-{
+/*#acc-content, #acc-content2, #acc-content3*/
+/*{*/
     /*height: 400px;*/
     /*overflow: hidden;*/
-}
+/*}*/
 
 
 #acc-content
